tests/baselines/reference/ES5For-ofTypeCheck8.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck8.ts(3,6): error TS2322: Type '文字 | 数字 | 符号' is not assignable to type '符号'.
  Type '文字' is not assignable to type '符号'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck8.ts (1 errors) ====
    var union: string | string[]| number[]| symbol[];
    var v: symbol;
    for (v of union) { }
         ~
!!! error TS2322: Type '文字 | 数字 | 符号' is not assignable to type '符号'.
!!! error TS2322:   Type '文字' is not assignable to type '符号'.